@@ -86,20 +86,57 @@ public class TestWordBreakSpellChecker extends LuceneTestCase {
   }
 
   public void testMaxEvaluations() throws Exception {
-    final int maxEvals = 100;
-
     try (IndexReader ir = DirectoryReader.open(dir)) {
+
+      final String input = "ab".repeat(5);
+      final int maxEvals = 100;
+      final int maxSuggestions = maxEvals * 2; // plenty
+
       WordBreakSpellChecker wbsp = new WordBreakSpellChecker();
-      wbsp.setMaxChanges(10);
       wbsp.setMinBreakWordLength(1);
       wbsp.setMinSuggestionFrequency(1);
-      wbsp.setMaxEvaluations(100);
 
-      Term term = new Term("abba", "ab".repeat(5));
+      wbsp.setMaxChanges(2 * input.length()); // plenty
+      wbsp.setMaxEvaluations(maxEvals);
+
+      Term term = new Term("abba", input);
       SuggestWord[][] sw =
           wbsp.suggestWordBreaks(
               term,
-              500,
+              maxSuggestions,
+              ir,
+              SuggestMode.SUGGEST_WHEN_NOT_IN_INDEX,
+              BreakSuggestionSortMethod.NUM_CHANGES_THEN_MAX_FREQUENCY);
+
+      // sanity check that our suggester isn't completely broken
+      assertThat(sw.length, org.hamcrest.Matchers.greaterThan(0));
+
+      // if maxEvaluations is respected, we can't possibly have more suggestions than that
+      assertThat(sw.length, org.hamcrest.Matchers.lessThan(maxEvals));
+    }
+  }
+
+  public void testSmallMaxEvaluations() throws Exception {
+    // even using small maxEvals (relative to maxChanges) should produce
+    // good results if possible
+
+    try (IndexReader ir = DirectoryReader.open(dir)) {
+
+      final int maxEvals = TestUtil.nextInt(random(), 6, 20);
+      final int maxSuggestions = maxEvals * 10; // plenty
+
+      WordBreakSpellChecker wbsp = new WordBreakSpellChecker();
+      wbsp.setMinBreakWordLength(1);
+      wbsp.setMinSuggestionFrequency(1);
+
+      wbsp.setMaxChanges(maxEvals * 10); // plenty
+      wbsp.setMaxEvaluations(maxEvals);
+
+      Term term = new Term("abba", "ababab");
+      SuggestWord[][] sw =
+          wbsp.suggestWordBreaks(
+              term,
+              maxSuggestions,
               ir,
               SuggestMode.SUGGEST_WHEN_NOT_IN_INDEX,
               BreakSuggestionSortMethod.NUM_CHANGES_THEN_MAX_FREQUENCY);
@@ -109,6 +146,12 @@ public class TestWordBreakSpellChecker extends LuceneTestCase {
 
       // if maxEvaluations is respected, we can't possibly have more suggestions then that.
       assertThat(sw.length, org.hamcrest.Matchers.lessThan(maxEvals));
+
+      // we should have been able to find this "optimal" (due to fewest num changes)
+      // suggestion before hitting our small maxEvals (and before any suggests with more breaks)
+      assertEquals(2, sw[0].length);
+      assertEquals("aba", sw[0][0].string);
+      assertEquals("bab", sw[0][1].string);
     }
   }
 
